@@ -12,3 +12,7 @@ repositories {
 dependencies {
     implementation 'org.ow2.asm:asm:9.1'
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "--enable-preview"
+}
